--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
+@font-face {
+  font-family: Avenir;
+  src: url("/fonts/avenir/AvenirLTStd-Roman.otf");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* base css */
+.my-container {
+  width: 1120px;
+  max-width: 100%;
+}
