--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,35 @@
   width: 1120px;
   max-width: 100%;
 }
+
+/* slider */
+.slider__dot {
+  width: 5px !important;
+  height: 5px !important;
+  background-color: #fff !important;
+  border-radius: 50px !important;
+  padding: 0 !important;
+}
+
+.slider__dot::before {
+  content: "" !important;
+}
+
+.slick-dots {
+  bottom: -100px;
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+}
+
+.slick-dots li {
+  bottom: 50px;
+  width: auto !important;
+  height: auto !important;
+}
+
+.slick-active .slider__dot {
+  width: 10px !important;
+  height: 10px !important;
+  background-color: #f063b8 !important;
+}
