--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,9 @@
 
 /* base css */
 .my-container {
-  width: 1120px;
+  width: calc(1120px + 24px);
   max-width: 100%;
+  padding: 0 12px;
 }
 
 /* slider */
