--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,14 @@ body {
   transition: all 0.25s linear;
 }
 
+.btn-has-shadow {
+  box-shadow: 0 5px 5px rgba(75, 93, 104, 0.1);
+}
+
+.swal2-popup {
+  font-size: 1.5rem !important;
+}
+
 /* slider */
 .slider__dot {
   width: 5px !important;
