--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -157,16 +157,17 @@
 
 /* testimonials */
 .testimonials {
-  margin-top: 120px;
+  margin-top: 113px;
   height: 710px;
   border-radius: 50px;
   background-color: var(--primary-color);
   padding: 12px;
+  overflow: hidden;
 }
 
 .testimonials__title {
-  padding-top: 110px;
-  margin-left: 93px;
+  padding-top: 98px;
+  margin-left: 92px;
   margin-bottom: 88px;
   font-weight: 700;
   font-size: 4rem;
@@ -179,6 +180,57 @@
   max-width: 100%;
   margin: 0 auto;
   position: relative;
+}
+
+.testimonials__slider-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #fff;
+  font-size: 2rem;
+  cursor: pointer;
+  transition: all 0.25s linear;
+}
+
+.testimonials__slider-arrow--right {
+  right: -50px;
+}
+
+.testimonials__slider-arrow--left {
+  left: -50px;
+}
+
+.testimonials__slider-dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: -68px;
+  left: 50%;
+  transform: translateX(-50%);
+  list-style-type: none;
+}
+
+.testimonials__slider-dot {
+  width: 6px;
+  height: 6px;
+  font: 0;
+  background-color: #fff;
+  border-radius: 50px;
+  cursor: pointer;
+  margin: 0px 4px;
+  transition: all 0.2s linear;
+}
+
+.testimonials__slider-dot:hover,
+.testimonials__slider-arrow:hover {
+  opacity: 0.8;
+}
+
+.testimonials__slider-dot--active {
+  width: 10px;
+  height: 10px;
+  background-color: #f063b8;
 }
 
 .testimonials__slider-item {
